# sc-kpm-extended

./: CMakeLists.txt  README.md
search_extended/: ASearchElementsConnectedWithRelation.cpp  ASearchElementsConnectedWithRelation.hpp  ASearchOutsidePart.cpp  ASearchOutsidePart.hpp  ASearchPartsByRelations.cpp  ASearchPartsByRelations.hpp  ASearchPartsContainingPartWithCharacteristic.cpp  ASearchPartsContainingPartWithCharacteristic.hpp  ASearchPartsOfGivenClasses.cpp  ASearchPartsOfGivenClasses.hpp  CMakeLists.txt  searchKeynodes.cpp  searchKeynodes.hpp  searchUtils.cpp  searchUtils.hpp  search_extended.cpp  search_extended.hpp
